# EnhancedDisplaySwitch

./: .gitignore  CMakeLists.txt  EnhancedDisplaySwitch.cpp  EnhancedDisplaySwitch.h  EnhancedDisplaySwitch.pro  README.md  main.cpp
.github/workflows/: build-and-release.yml  build.yml
src/: main.cpp
src/EnhancedDisplaySwitch/: EnhancedDisplaySwitch.cpp  enhanceddisplayswitch.h
